<?xml version="1.0"?>
<package format="2">
  <name>mujoco_ros</name>
  <version>0.0.1</version>
  <description>The franka_mujoco package</description>

  <maintainer email="dleins@techfak.de">David Leins</maintainer>
  <license>GPLv3</license>

  <url type="repository">https://github.com/DavidPL1/mujoco_ros_pkgs</url>
  <url type="bugtracker">https://github.com/DavidPL1/mujoco_ros_pkgs/issues</url>
  <author>David Leins</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>pluginlib</depend>
  <depend>mujoco_ros_msgs</depend>

  <export>
    <!--  -->
  </export>
</package>
