<?xml version="1.0"?>
<package format="2">
  <name>mujoco_ros</name>
  <version>2.0.0</version>
  <description>The mujoco_ros package</description>

  <maintainer email="dleins@techfak.uni-bielefeld.de">David P. Leins</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/DavidPL1/mujoco_ros_pkgs</url>
  <url type="bugtracker">https://github.com/DavidPL1/mujoco_ros_pkgs/issues</url>
  <author>David P. Leins</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>pluginlib</depend>
  <depend>mujoco_ros_msgs</depend>

</package>
