<?xml version="1.0"?>
<package format="2">
  <name>mujoco_ros</name>
  <version>0.6.0</version>
  <description>The mujoco_ros package</description>

  <maintainer email="dleins@techfak.uni-bielefeld.de">David P. Leins</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/DavidPL1/mujoco_ros_pkgs</url>
  <url type="bugtracker">https://github.com/DavidPL1/mujoco_ros_pkgs/issues</url>
  <author>David P. Leins</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>python3</depend>
  <depend>pybind11_catkin</depend>

  <depend>roscpp</depend>
  <depend>pluginlib</depend>
  <depend>mujoco_ros_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>libglfw3-dev</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend version_gte="1.13.2">urdf</depend>
  <test_depend>rostest</test_depend>

</package>
