<?xml version="1.0"?>
<package format="2">
  <name>mujoco_ros_hog</name>
  <version>0.5.0</version>
  <description>The mujoco_hog package</description>

  <url type="repository">https://github.com/DavidPL1/mujoco_ros_pkgs</url>
  <url type="bugtracker">https://github.com/DavidPL1/mujoco_ros_pkgs/issues</url>

  <maintainer email="jleichert@techfak.uni-bielefeld.de">Julian Leichert</maintainer>
  <author>Julian Leichert</author>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>tf2</depend>

  <depend version_gte="3.0.0">mujoco_ros</depend>

  <export>
    <mujoco_ros plugin="${prefix}/mujoco_ros_hog_plugin.xml" />
  </export>
</package>
