<?xml version="1.0"?>
<package format="2">
  <name>mujoco_mocap</name>
  <version>1.0.0</version>
  <description>The mujoco_mocap plugin package</description>

  <url type="repository">https://github.com/ubi-agni/mujoco_mocap_plugin</url>
  <url type="bugtracker">https://github.com/ubi-agni/mujoco_mocap_plugin/issues</url>

  <maintainer email="dleins@techfak.de">David Leins</maintainer>
  <author>David Leins</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>mujoco_ros</depend>

  <export>
    <mujoco_ros plugin="${prefix}/mocap_plugin.xml" />
  </export>
</package>
