<?xml version="1.0"?>
<package format="2">
  <name>mujoco_ros_msgs</name>
  <version>0.4.0</version>
  <description>mujoco_ros_msgs provides message files for interaction with a mujoco_ros simulation</description>

  <maintainer email="dleins@techfak.uni-bielefeld.de">David Leins</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/DavidPL1/mujoco_ros_pkgs</url>
  <url type="bugtracker">https://github.com/DavidPL1/mujoco_ros_pkgs/issues</url>
  <author>David P. Leins</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
