<?xml version="1.0"?>
<package format="2">
    <name>mujoco_ros_pkgs</name> <!-- This is a meta package! -->
    <version>0.4.0</version>
    <description>Interface for using ROS with the <a href="https://mujoco.org/">MuJoCo</a> simulator.</description>

    <license>BSD</license>

    <url type="bugtracker">https://github.com/DavidPL1/mujoco_ros_pkgs/issues</url>
    <url type="repository">https://github.com/DavidPL1/mujoco_ros_pkgs</url>

    <maintainer email="dleins@techfak.uni-bielefeld.de">David P. Leins</maintainer>
    <author>David P. Leins</author>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>mujoco_ros_msgs</exec_depend>
    <exec_depend>mujoco_ros</exec_depend>
    <exec_depend>mujoco_ros_control</exec_depend>
    <exec_depend>mujoco_ros_sensors</exec_depend>

    <export>
        <metapackage/>
    </export>
</package>
